# Zygisk-ImGui-Menu

./: README.md  build.gradle  module.gradle
.github/workflows/: build.yml
gradle/wrapper/: gradle-wrapper.properties
module/: build.gradle
module/src/main/: AndroidManifest.xml
module/src/main/cpp/: Auth.h  CMakeLists.txt  Chams.h  Misc.h  functions.h  hook.cpp  hook.h  main.cpp  menu.h
module/src/main/cpp/ImGui/: ImGui_mod.h  imgui_demo.cpp  imgui_draw.cpp  imgui_widgets.cpp
module/src/main/cpp/ImGui/backends/: imgui_impl_android.cpp  imgui_impl_android.h  imgui_impl_opengl3.h
module/src/main/cpp/Include/: Color.h  JNIStuff.h  Quaternion.h  Rect.h  Roboto-Regular.h  Unity.h  Vector3.h  json.h  obfuscate.h
module/src/main/cpp/Include/Substrate/: SubstrateHook.cpp  SubstratePosixMemory.cpp
module/src/main/cpp/Includes/Dobby/: dobbyForHooks.h
module/src/main/cpp/KittyMemory/: KittyMemory.cpp
